--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+    env:
+          REACT_APP_SITE_KEY: ${{ secrets.REACT_APP_SITE_KEY }}
     steps:
     - uses: actions/checkout@v2
 
