--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.2",
+    "i18next": "^21.9.2",
+    "i18next-browser-languagedetector": "^6.1.5",
+    "i18next-http-backend": "^1.4.4",
+    "i18next-xhr-backend": "^3.2.2",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-i18next": "^11.18.6",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "reaptcha": "^1.12.1",
     "sass": "^1.54.9",
+    "save": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
